--- a/index.html
+++ b/index.html
@@ -467,6 +467,15 @@
                         <label for="toggle-pessoas">Fluxo de Pessoas</label>
                         <span style="width: 12px; height: 12px; background: #3b82f6; border-radius: 50%; margin-left: 0.5rem;"></span>
                     </div>
+                    <div class="layers-control">
+    <h3>Fluxo por Entrada</h3>
+    <div id="fluxo-entradas">
+        <div>Entrada Norte: <span id="fluxo-entrada-entrada_norte">0</span> pessoas</div>
+        <div>Entrada Sul: <span id="fluxo-entrada-entrada_sul">0</span> pessoas</div>
+        <div>Entrada Leste: <span id="fluxo-entrada-entrada_leste">0</span> pessoas</div>
+        <div>Entrada Oeste: <span id="fluxo-entrada-entrada_oeste">0</span> pessoas</div>
+    </div>
+</div>
                     <div class="layer-toggle">
                         <input type="checkbox" id="toggle-veiculos" checked>
                         <label for="toggle-veiculos">Fluxo de Veículos</label>
