--- a/index.html
+++ b/index.html
@@ -459,29 +459,28 @@
             <div id="map"></div>
             
             <!-- Controles -->
-            <div class="controls">
-                <div class="layers-control">
-                    <h3>Camadas</h3>
-                    <div class="layer-toggle">
-                        <input type="checkbox" id="toggle-pessoas" checked>
-                        <label for="toggle-pessoas">Fluxo de Pessoas</label>
-                        <span style="width: 12px; height: 12px; background: #3b82f6; border-radius: 50%; margin-left: 0.5rem;"></span>
-                    </div>
-                    <div class="layers-control">
-    <h3>Fluxo por Entrada</h3>
-    <div id="fluxo-entradas">
-        <div>Entrada Norte: <span id="fluxo-entrada-entrada_norte">0</span> pessoas</div>
-        <div>Entrada Sul: <span id="fluxo-entrada-entrada_sul">0</span> pessoas</div>
-        <div>Entrada Leste: <span id="fluxo-entrada-entrada_leste">0</span> pessoas</div>
-        <div>Entrada Oeste: <span id="fluxo-entrada-entrada_oeste">0</span> pessoas</div>
-    </div>
+           <div class="layers-control">
+  <h3>Camadas</h3>
+  <div class="layer-toggle">
+    <input type="checkbox" id="toggle-pessoas" checked>
+    <label for="toggle-pessoas">Fluxo de Pessoas</label>
+    <span style="width: 12px; height: 12px; background: #3b82f6; border-radius: 50%; margin-left: 0.5rem;"></span>
+  </div>
+  <div class="layer-toggle">
+    <input type="checkbox" id="toggle-veiculos" checked>
+    <label for="toggle-veiculos">Fluxo de Veículos</label>
+    <span style="width: 12px; height: 12px; background: #8b5cf6; border-radius: 50%; margin-left: 0.5rem;"></span>
+  </div>
+
+  <!-- Fluxo por Entrada -->
+  <h3 style="margin-top: 1.5rem;">Fluxo por Entrada</h3>
+  <div id="fluxo-entradas">
+    <div>Entrada Norte: <span id="fluxo-entrada-entrada_norte">0</span> pessoas</div>
+    <div>Entrada Sul: <span id="fluxo-entrada-entrada_sul">0</span> pessoas</div>
+    <div>Entrada Leste: <span id="fluxo-entrada-entrada_leste">0</span> pessoas</div>
+    <div>Entrada Oeste: <span id="fluxo-entrada-entrada_oeste">0</span> pessoas</div>
+  </div>
 </div>
-                    <div class="layer-toggle">
-                        <input type="checkbox" id="toggle-veiculos" checked>
-                        <label for="toggle-veiculos">Fluxo de Veículos</label>
-                        <span style="width: 12px; height: 12px; background: #8b5cf6; border-radius: 50%; margin-left: 0.5rem;"></span>
-                    </div>
-                </div>
                 
                 <!-- Filtro de Horários de Pico -->
                 <div class="layers-control">
