--- a/index.html
+++ b/index.html
@@ -425,7 +425,10 @@
                     <div class="header-subtitle">Análise de Fluxo em Tempo Real - João Pessoa, PB</div>
                 </div>
             </div>
-            <button id="btn-export-png">Exportar painel como PNG</button>
+           <button id="btn-exportacao-png" style="margin: 12px; padding: 6px 18px; border-radius: 8px; background: #e62d2d; color: #fff; border: none; font-weight: bold; cursor: pointer;">
+    Exportar painel como PNG
+</button>
+
             <div class="header-info">
                 <div style="font-weight: 600;">Rodrigues Lopes</div>
                 <div style="opacity: 0.8;">(RBIM)</div>
@@ -637,11 +640,6 @@
     <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
     
     <!-- Custom JavaScript -->
-    <script src="script.js"></script>
-</body>
-</html>
-
-
     <script src="script.js"></script>
 </body>
 </html>
