--- a/index.html
+++ b/index.html
@@ -415,6 +415,7 @@
     </style>
 </head>
 <body>
+    <div class="painel" id="painel-captura">
     <!-- Header -->
     <header class="header">
         <div class="header-content">
@@ -637,6 +638,7 @@
             document.head.appendChild(script);
         }
     </script>
+          </div>
     <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
     
     <!-- Custom JavaScript -->
